# MSML

./: .gitignore  CMakeLists.txt  README.md  download_data.py  main.py  setup.py
.github/workflows/: main.yml
CPP/: cpp_main.py
CPP/linear_regression/: ReadME.md  linear_regression.cpp  linear_regression.h  linear_regression_bindings.cpp  linear_regression_bindings.h
python/: main.py
python/models/: neural_network.py
